--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "getmobile1",
   "version": "0.1.0",
   "private": true,
+"engines" :{
+"node":"14.5.0",
+"npm":"6.14.5"
+},
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
